# stm32-zephyr-watchdog-threads

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  NOTICE  README.md  prj.conf
.github/workflows/: native-sim.yml
boards/: README.md  nucleo_l053r8_app.overlay
docs/: architecture.md  persist_state.md  recovery.md  supervisor.md  testing.md  uart_commands.md  watchdog_ctrl.md
src/: log_utils.h  main.c  persist_state.c  persist_state.h  recovery.c  recovery.h  supervisor.c  supervisor.h  uart_commands.c  uart_commands.h  watchdog_ctrl.h
tests/: README.md
tests/persist_state/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/persist_state/src/: main.c
tests/supervisor/: CMakeLists.txt  prj.conf  testcase.yaml
tests/supervisor/src/: main.c
